# diptera_busco_painter

./: .env.example  .gitignore  README.md  busco_to_diptera_algs.sh  buscopainter.py  plot_buscopainter.py  pyproject.toml  tolid_accessions.tsv
examples/: README.md
examples/idTipFasc1/: all_location.tsv  chrom_lengths.tsv  full_table.tsv  summary.tsv
examples/idWinCrue1/: all_location.tsv  chrom_lengths.tsv  full_table.tsv  summary.tsv
src/diptera_busco_painter/: __init__.py  __main__.py  cli.py  painter.py  plotter.py
